# creators_dao_demo

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: config-overrides.js  package-lock.json  package.json
app/src/: App.css  App.tsx  index.tsx
app/src/conponents/: Card.tsx
app/src/idl/: demo.json  demo.ts
app/src/utils/: pdas.ts  utils.ts
programs/demo/: Cargo.toml
programs/demo/src/: lib.rs
programs/demo/src/instructions/: create_post.rs  delete_post.rs  mod.rs
programs/demo/src/state/: mod.rs  post_pda.rs  profile_pda.rs
tests/: demo.ts
utils/: pdas.ts
